# AutoDockCuda

./: .gitignore  README.md  variableNames.txt
autodock-4.2.6-src/src/autodock/: Makefile  Makefile.am  Makefile.in  autocomm.h  call_glss.cc  config.status  configure  configure.ac  cuda_structs.h  cuda_tests.cu  cuda_tests.cuh  cuda_tests_host.cc  cuda_tests_host.h  cuda_utils_gpu.cu  cuda_utils_gpu.cuh  cuda_utils_host.cc  cuda_utils_host.h  eintcal_kernel.cu  eintcal_kernel.cuh  eintcal_kernel.h  eval.cc  eval.h  gpu_variables.h  memory_layout.cu  memory_layout.cuh  memory_layout.h  qtransform.h  qtransform_kernel.cu  qtransform_kernel.cuh  runit.sh  start_CUDA.cu  start_CUDA_on_population.cc  support.cc  support.h  torsion.cc  torsion.cu  torsion_kernel.cu  torsion_kernel.cuh
autodock-4.2.6-src/src/autodock/EXAMPLES/1dwd/dock_flexlig/: 1dwd_1dwd.dpf  output_logfile.dlg
autodock-4.2.6-src/src/autodock/EXAMPLES/1dwd/dock_rigidlig/: 1dwd_1dwd.dpf  output_logfile.dlg
autodock-4.2.6-src/src/autodock/autom4te.cache/: output.1  requests  traces.0  traces.1
autodock-4.2.6-src/src/autodock/notes/: memory_layout.cu  patricks_notes.txt
autodock_vina_1_1_2/src/main/: main.cpp
autodockcuda/src/autodock/: Makefile.in  config.status  configure.ac  constants.h  cuda_structs.h  cuda_tests.cu  cuda_tests.cuh  cuda_utils_gpu.cuh  cuda_utils_host.cc  cuda_utils_host.h  eintcal_kernel.cu  eintcal_kernel.cuh  eval.cc  memory_layout.cu  qtransform.cc  start_CUDA.cu  start_CUDA.cuh  support.cc
autodockcuda/src/autodock/Cuda_Kernels/: put_your_kernels_here.txt  qtransform.cu
autodockcuda/src/autodock/autom4te.cache/: output.0  requests
gpuautodock/analysis_scripts/: extract_info.pl  time_AutoDock_script.pl
gpuautodock/analysis_scripts/matlab_scripts/: format_data.m  test_script.m  test_two_outputs_are_similar_non_parametric.m
gpuautodock/condor_scripts/: README  condortest1.sh  condortest2.sh  condortest3.sh  submit1  submit2  submit3
gpuautodock/condor_scripts/err/: condortest.sh.0.err  condortest.sh.1.err  condortest.sh.10.err  condortest.sh.11.err  condortest.sh.12.err  condortest.sh.14.err  condortest.sh.15.err  condortest.sh.16.err  condortest.sh.17.err  condortest.sh.18.err  condortest.sh.19.err  condortest.sh.20.err  condortest.sh.21.err  condortest.sh.22.err  condortest.sh.24.err  condortest.sh.25.err  condortest.sh.26.err  condortest.sh.27.err  condortest.sh.28.err  condortest.sh.29.err  condortest.sh.30.err  condortest.sh.31.err  condortest.sh.32.err  condortest.sh.33.err  condortest.sh.34.err  condortest.sh.35.err  condortest.sh.36.err  condortest.sh.37.err  condortest.sh.38.err  condortest.sh.39.err  condortest.sh.40.err  condortest.sh.41.err  condortest.sh.42.err  condortest.sh.43.err  condortest.sh.44.err  condortest.sh.45.err  condortest.sh.46.err  condortest.sh.47.err  condortest.sh.48.err  condortest.sh.49.err  (+9 more)
gpuautodock/condor_scripts/input1/: 1adb_1adb.gpf  1adb_lig.pdbqt  1adb_rec.A.map  1adb_rec.C.map  1adb_rec.HD.map  1adb_rec.NA.map  1adb_rec.e.map  1adb_rec.maps.xyz  1adb_rec.pdbqt
gpuautodock/documents/: autoDock_flowREADME  autoDock_optimizationsREADME
gpuautodock/input_test_data/input1/: 1adb_1adb_ro.dpf  1adb_rec.N.map  1adb_rec.OA.map  1adb_rec.P.map  1adb_rec.d.map  1adb_rec.maps.fld  test_1_parameterfile.dpf
gpuautodock/input_test_data/input2/: 7abp.glg  7abp_7abp.001.dlg  7abp_7abp.002.dlg  7abp_7abp.003.dlg  7abp_7abp.004.dlg  7abp_7abp.005.dlg  7abp_7abp.glg  7abp_7abp.gpf  7abp_7abp_ro.dpf  7abp_lig.pdbqt  7abp_rec.C.map  7abp_rec.HD.map  7abp_rec.OA.map  7abp_rec.d.map  7abp_rec.e.map  7abp_rec.maps.fld  7abp_rec.maps.xyz  7abp_rec.pdbqt  test_2_parameterfile.dpf
gpuautodock/input_test_data/input3/: 3ptb.glg  3ptb_3ptb.001.dlg  3ptb_3ptb.002.dlg  3ptb_3ptb.003.dlg  3ptb_3ptb.004.dlg  3ptb_3ptb.005.dlg  3ptb_3ptb.glg  3ptb_3ptb.gpf  3ptb_3ptb_ro.dpf  3ptb_lig.pdbqt  3ptb_rec.A.map  3ptb_rec.C.map  3ptb_rec.HD.map  3ptb_rec.N.map  3ptb_rec.d.map  3ptb_rec.e.map  3ptb_rec.maps.fld  3ptb_rec.maps.xyz  3ptb_rec.pdbqt  test_3_parameterfile.dpf
gpuautodock/src/autodock-4.0.1/: Makefile  Makefile.in  autodock4  call_glss.cc  call_gs.cc  config.status  configure  configure.ac  constants.h  eAllocPrepCuda.cc  eMapPrepCuda.cc  eintcal_kernel.cu  eintcal_kernel.cu.temp  eintcal_kernel.h  eval.cc  eval.h  eval_wrapper.cu  gs.cc  main.cc  select_alloc_wrapper.cu  support.cc  trilinterp.cc
gpuautodock/src/autodock-4.0.1/.deps/: analysis.Po  atom_parameter_manager.Po  banner.Po  bestpdb.Po  calculateEnergies.Po  call_glss.Po  call_gs.Po  call_ls.Po  changeState.Po  check_header_float.Po  check_header_int.Po  check_header_line.Po  clmode.Po  cluster_analysis.Po  cmdmode.Po  cnv_state_to_coords.Po  coliny.Po  com.Po  conformation_sampler.Po  distdepdiel.Po  eMapPrepCuda.Po  eintcal.Po  eintcalPrint.Po  eval.Po  gencau.Po  getInitialState.Po  get_atom_type.Po  getpdbcrds.Po  getrms.Po  initautodock.Po  input_state.Po  intnbtable.Po  investigate.Po  linpack.Po  ls.Po  main.Po  mapping.Po  minmeanmax.Po  mkNewState.Po  mkRandomState.Po  (+51 more)
gpuautodock/src/autodock-4.0.1/autom4te.cache/: output.0  requests  traces.0  (+1 more)
notes/: autodock-4.2.6-notes.org
parallelized_GA_kernels/: ga.cu
(+1 files in other folders)
